# claudebot

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
.github/workflows/: _claude_issue_reviewer.yml  _claude_pr_reviewer.yml  backend-tests.yml  claude_issue_reviewer.yml  claude_on_issue.yml  claude_on_pr.yml  frontend-build.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/app/: crud.py  initial_data.py  main.py  models.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: 001_initial.py
backend/app/api/: deps.py  main.py
backend/app/api/routes/: health.py  login.py  users.py
backend/app/core/: config.py  db.py  security.py
backend/app/tests/: conftest.py  test_health.py  test_login.py  test_users.py
docs/: claude-github-setup.md  pipedream-setup.md  sentry-github-setup.md
frontend/: Dockerfile  index.html  package.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: Layout.tsx  PrivateRoute.tsx
frontend/src/hooks/: useAuth.ts
frontend/src/pages/: Dashboard.tsx  Login.tsx  Users.tsx
frontend/src/types/: index.ts
scripts/: prestart.sh
